# back/openapi.yaml
@@ -388,6 +388,11 @@ paths:
           in: path
           required: true
           description: ID of the user for which to retrieve favorite resources
+        - name: categorySlug
+          in: path
+          required: true
+          description: Slug of the category for which to retrieve favorite resources
+          example: node
       responses:
         "200":
           description: Favorite resources retireved  successfully.
